--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon api/index.js",
-    "start": "node api/index.js"
+    "scripts": {
+      "start": "node api/index.js",
+      "dev": "nodemon api/index.js"
+    }
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.1",
+    "mongoose": "^8.8.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.7"
   }
 }
